src/objects/bot_message__e.object
<CustomObject>
    <fields>
        <fullName>Additional_Data__c</fullName>
        <label>Additional_Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SessionKey__c</fullName>
        <label>Session Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>data__c</fullName>
        <label>data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>bot message</label>
    <pluralLabel>bot messages</pluralLabel>
</CustomObject>